feat: optimized meta title and description for each page in english

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/user-ninja-solid.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Plateforme gratuite de mini-jeux HTML5. Joue à des centaines de jeux sans téléchargement!" />
-    <title>NinjaGameZone - Jeux HTML5 Gratuits</title>
+    <meta name="description" content="Free HTML5 games platform. Play hundreds of games directly in your browser without download!" />
+    <title>NinjaGameZone - Free HTML5 Games</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&display=swap" rel="stylesheet">
